chat-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-service
  ports:
    - protocol: TCP
      appProtocol: kubernetes.io/ws
      port: 8000
      targetPort: 8000
