chat-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chat-httproute
spec:
  parentRefs:
    - name: my-gateway
      namespace: istio-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /chat/
          method: GET
        - path:
            type: PathPrefix
            value: /chat/
          method: DELETE
        - path:
            type: PathPrefix
            value: /chat/mute/
          method: POST
        - path:
            type: PathPrefix
            value: /chat/ban/
          method: POST
      backendRefs:
        - name: chat-service
          port: 8000
